# myPlayer

./: .gitignore  CMakeLists.txt  FindFFMPEG.cmake  Format_Print.hpp  README.md  Titlebar.cpp  Titlebar.hpp  main.cpp  openVideo.cpp  openVideo.hpp  tqueue.hpp  tt.hpp  ui.qrc  videoPlayer.cpp  videoPlayer.hpp
ui/style/: style.qss
